rules/exposure-to-internet-via-gateway-api/test/failed_with_httproute_duplicate_backendref/input/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2024-02-04T19:05:12Z"
  generation: 1
  name: httpbin
  namespace: httpbin
  resourceVersion: "870"
  uid: 7462bb4c-b5a2-413e-80ee-c1baaf34aade
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: httpbin
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      containers:
      - args:
        - -port
        - "8080"
        - -max-duration
        - 600s
        command:
        - go-httpbin
        image: docker.io/mccutchen/go-httpbin:v2.6.0
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: httpbin
      serviceAccountName: httpbin
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-02-04T19:05:32Z"
    lastUpdateTime: "2024-02-04T19:05:32Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-02-04T19:05:12Z"
    lastUpdateTime: "2024-02-04T19:05:32Z"
    message: ReplicaSet "httpbin-f46cc8b9b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
